--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,7 @@ h1 {
 .top-section p {
     font-size: 1rem;
     line-height: 1.7rem;
+    color: hsl(218, 22%, 67%);
 }
 /*** TOP SECTION -END- ***/
 
@@ -103,6 +104,8 @@ h1 {
     padding: 15px;
     border-radius: 7px;
     margin-top: 30px;
+    box-shadow: 0px 5px 20px -16px rgba(0,0,0,1);
+    font-weight: 600;
 }
 /*** BOTTOM LEFT SECTION -END- ***/
 
